# cobalt

./: .env.example  .gitignore  Cargo.toml  cobalt.toml  cobalt.yml  db.txt  docker-compose.yml  meow  readme.txt  rustfmt.toml
.sqlx/: query-0fa4cc0b886b1374b72feaae24994c0a8c3ce757b01c4a9988fb27eb1534b436.json  query-427827a3d1c8e4e9afa2ffa74dc262bb234c28fa01487de52f7b7cff3694731d.json  query-7440f4d6d1e58d766e18115c177e9a36cb8947cad0936c02ede389e25ed8a693.json  query-f07583a0ccd3d447111cbff87068b95f93a95387a782f8b02cd0ef1dcc3971c3.json
assets/: style.css
examples/assets/: goat.pem  goat.pub
migrations/: 20240127220325_init.sql  20240128043658_initial.down.sql  20240128043658_initial.up.sql
src/: auth.rs  config.rs  db.rs  error.rs  errors.rs  main.rs  offset.rs  score.rs  shuffle.rs  state.rs  time.rs
src/checks/: errors.rs  http.rs  http_content.rs  mod.rs  ssh.rs
src/config/: auth.rs  check_types.rs  mod.rs
src/db/: mod.rs  models.rs  mutation.rs  query.rs
src/web/: auth.rs  injects.rs  login.rs  logout.rs  mod.rs  routes.rs  status.rs
templates/: base.html  inject_page.html  injects.html  login.html  service_statuses.html  status.html
