[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.77"
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
enum_dispatch = "0.3.12"
rand = "0.8.5"
regex = "1.10.3"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_regex = "1.1.0"
serde_with = "3.5.1"
serde_yaml = "0.9.30"
sqlx = { version = "0.7.3", features = [
	"runtime-tokio",
	"tls-native-tls",
	"postgres",
	"macros",
	"chrono",
] }
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
